--- a/src/markdown/mas/maak_figuren_rapport.Rmd
+++ b/src/markdown/mas/maak_figuren_rapport.Rmd
@@ -593,6 +593,7 @@ for (spec in species) {
 
 ```{r}
 beheermodel_path <- here("src/markdown/mas/analyses_cache")
+projpred_path <- here("src/markdown/mas/projpred_cache")
 ```
 
 
@@ -604,10 +605,6 @@ dir.create("media/beheerovereenkomsten/oostelijke_leemstreek", FALSE)
 ```
 
 ### Projection prediction
-
-```{r}
-projpred_path <- here("src/markdown/mas/projpred_cache")
-```
 
 ```{r}
 cvvs_ol_veldleeuwerik <- readRDS(here(projpred_path,
@@ -790,6 +787,198 @@ for (spec in names(draws_olpropsb_list_wt)) {
          height = 6)
 }
 ```
+
+## De Moeren
+
+```{r}
+dir.create("media/beheerovereenkomsten", FALSE)
+dir.create("media/beheerovereenkomsten/de_moeren", FALSE)
+```
+
+### Projection prediction
+
+```{r}
+cvvs_dm_veldleeuwerik <- readRDS(here(projpred_path,
+                                      "cvvs_dmpropsb_new_veldleeuwerik.rds"))
+```
+
+```{r}
+p <- plot(cvvs_dm_veldleeuwerik,
+          stats = "mlpd",
+          deltas = TRUE,
+          ranking_nterms_max = NA) +
+  scale_x_continuous(breaks = seq(0, 20, 2), limits = c(0, 20)) +
+  labs(y = "Verschil met referentiemodel (MLPD)",
+       x = "Submodelgrootte (aantal verklarende variabelen)") +
+  theme(
+    strip.background = element_blank(),
+    strip.text.x = element_blank()
+  )
+
+ggsave(here("media", "beheerovereenkomsten", "de_moeren",
+            "cvvs_ranking_veldleeuwerik.pdf"),
+         p,
+         dpi = 300,
+         width = 8,
+         height = 6)
+```
+
+```{r}
+rk <- ranking(cvvs_dm_veldleeuwerik)
+pr_rk <- cv_proportions(rk)
+
+p <- plot(cv_proportions(rk, cumulate = TRUE)) +
+  labs(y = "",
+       x = "Submodelgrootte (aantal verklarende variabelen)") +
+  scale_fill_gradientn(name = "Proportie\nvan CV folds",
+                       labels = scales::label_percent(suffix = " %"),
+                       limits = c(0, 1),
+                       colours = c("white", "gold", "darkgreen"))
+
+p$layers[[2]] <- NULL
+p <- p +
+  geom_text(mapping = aes(label = paste(round(100 * .data[["propcv"]]), "%"),
+                          color = I(.data[["txtcolor"]])),
+            size = 2.5)
+
+ggsave(here("media", "beheerovereenkomsten", "de_moeren",
+            "cvvs_proporties_veldleeuwerik.pdf"),
+         p,
+         dpi = 300,
+         width = 10,
+         height = 6)
+```
+
+### Beheerovereenkomsten
+
+```{r}
+mod_final_dmpropsb_list <- readRDS(here(beheermodel_path,
+                                        "mod_final_dmpropsb_list.rds"))
+```
+
+```{r}
+# get posterior draws for parameters of interest
+draws_dmpropsb_list <- lapply(mod_final_dmpropsb_list, create_draws_df)
+draws_dmpropsb_list_wt <- lapply(mod_final_dmpropsb_list,
+                                 create_weighted_draws_df)
+```
+
+```{r}
+min_threshold <- log(0.8)
+max_threshold <- log(1.25)
+
+area_prop_cats <- tibble(
+  area_prop_sb_cat = c("nulbeleid", "laagbeleid", "middellaagbeleid",
+                       "middelhoogbeleid", "hoogbeleid"),
+  prop_area_sb = c("0", "<0.04", "0.04-0.07", "0.07-0.1", ">0.1")
+  ) %>%
+  rowid_to_column("order")
+
+area_prop_cats2 <- tibble(
+  area_prop_sb_cat = c("nulbeleid", "laagbeleid", "hoogbeleid"),
+  prop_area_sb = c("0", "<0.07", ">0.07")
+  ) %>%
+  rowid_to_column("order")
+```
+
+```{r}
+for (spec in names(draws_dmpropsb_list)) {
+  file <- paste0("beleidstoestand_", tolower(spec), "_fine.pdf")
+  
+  p <- draws_dmpropsb_list[[spec]] %>%
+    left_join(area_prop_cats, by = join_by(area_prop_sb_cat)) %>%
+    mutate(label = paste0(area_prop_sb_cat, "\n(", prop_area_sb, ")"),
+           label = reorder(label, order, decreasing = FALSE)) %>%
+    ggplot(aes(x = label)) +
+      geom_violin(aes(y = value_log, fill = trend_coarse),
+                  colour = alpha("white", 0)) +
+      geom_hline(yintercept = 0, linetype = "longdash", colour = "black") +
+      geom_hline(yintercept = c(min_threshold, max_threshold),
+                 linetype = "dotdash") +
+      geom_errorbar(aes(ymin = lcl_log, ymax = ucl_log),
+                    linewidth = 1, colour = "black", width = 0.1) +
+      geom_point(aes(y = median_log),
+                 size = 2.2, colour = "black") +
+      scale_fill_manual(values =  c("chartreuse3",
+                                    "gold",
+                                    "firebrick1",
+                                    "skyblue"),
+                        drop = FALSE) +
+      labs(y = "Procentueel verschil met telpunten zonder maatregelen",
+           x = "",
+           fill = "Verschil") +
+      scale_y_continuous(
+        breaks = index_breaks(),
+        labels = index_labels,
+        minor_breaks = minor_breaks(),
+        sec.axis = sec_axis(~ exp(.),
+          breaks = index_breaks_rev(),
+          labels = index_labels_rev(),
+          name = "Relatief verschil met telpunten zonder maatregelen")
+        ) +
+      theme(
+        legend.position = "right",
+        legend.background = element_rect(fill = "white", color = "darkgrey"),
+        legend.margin = margin(6, 6, 6, 6)
+        )
+  
+  ggsave(here("media", "beheerovereenkomsten", "de_moeren", file),
+         p,
+         dpi = 300,
+         width = 8,
+         height = 6)
+}
+```
+
+```{r}
+for (spec in names(draws_dmpropsb_list_wt)) {
+  file <- paste0("beleidstoestand_", tolower(spec), "_coarse.pdf")
+  
+  p <- draws_dmpropsb_list_wt[[spec]] %>%
+    left_join(area_prop_cats2, by = join_by(area_prop_sb_cat)) %>%
+    mutate(label = paste0(area_prop_sb_cat, "\n(", prop_area_sb, ")"),
+           label = reorder(label, order, decreasing = FALSE)) %>%
+    ggplot(aes(x = label)) +
+      geom_violin(aes(y = value_log, fill = trend_coarse),
+                  colour = alpha("white", 0)) +
+      geom_hline(yintercept = 0, linetype = "longdash", colour = "black") +
+      geom_hline(yintercept = c(min_threshold, max_threshold),
+                 linetype = "dotdash") +
+      geom_errorbar(aes(ymin = lcl_log, ymax = ucl_log),
+                    linewidth = 1, colour = "black", width = 0.1) +
+      geom_point(aes(y = median_log),
+                 size = 2.2, colour = "black") +
+      scale_fill_manual(values =  c("chartreuse3",
+                                    "gold",
+                                    "firebrick1",
+                                    "skyblue"),
+                        drop = FALSE) +
+      labs(y = "Procentueel verschil met telpunten zonder maatregelen",
+           x = "",
+           fill = "Verschil") +
+      scale_y_continuous(
+        breaks = index_breaks(),
+        labels = index_labels,
+        minor_breaks = minor_breaks(),
+        sec.axis = sec_axis(~ exp(.),
+          breaks = index_breaks_rev(),
+          labels = index_labels_rev(),
+          name = "Relatief verschil met telpunten zonder maatregelen")
+        ) +
+      theme(
+        legend.position = "right",
+        legend.background = element_rect(fill = "white", color = "darkgrey"),
+        legend.margin = margin(6, 6, 6, 6)
+        )
+  
+  ggsave(here("media", "beheerovereenkomsten", "de_moeren", file),
+         p,
+         dpi = 300,
+         width = 8,
+         height = 6)
+}
+```
+
 
 # Zichtbaarheid
 
